--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.543.0",
     "motion": "^12.23.12",
-    "next": "latest",
+    "next": "16.1.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-dropzone": "^14.3.8",
@@ -41,7 +41,7 @@
     "@types/react": "19.1.12",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
-    "eslint-config-next": "latest",
+    "eslint-config-next": "16.1.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17"
   }
