--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "face-api.js": "^0.22.2",
     "framer-motion": "^12.23.12",
+    "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.543.0",
     "motion": "^12.23.12",
